--- a/index.html
+++ b/index.html
@@ -41,9 +41,7 @@
           <ul id="listFilter">
         </aside>
 
-        <div class="store">
-
-        </div>
+        <div class="store" id="storeContainer"></div>
       </div>
 
       <!-- POPUP -->
